--- a/index.html
+++ b/index.html
@@ -2,52 +2,75 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Enterprise Invitation System</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Undangan Digital</title>
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-light">
 
-<div class="container py-4">
+  <!-- Cover -->
+  <section class="text-center bg-dark text-white p-5">
+    <h1 class="display-4">Undangan Spesial</h1>
+    <p class="lead">Syqila & Tim mengundang Anda untuk hadir</p>
+  </section>
 
-  <h3 class="mb-4 text-center">🏢 Enterprise Invitation Management System</h3>
-
-  <!-- EVENT FORM -->
-  <div class="card mb-3">
-    <div class="card-header">Buat Event</div>
-    <div class="card-body">
-      <input type="hidden" id="eventId">
-      <input class="form-control mb-2" id="eventName" placeholder="Nama Acara">
-      <input type="date" class="form-control mb-2" id="eventDate">
-      <input class="form-control mb-2" id="eventLocation" placeholder="Lokasi">
-      <button class="btn btn-primary" onclick="saveEvent()">Simpan Event</button>
+  <!-- Detail Acara -->
+  <section class="container my-5">
+    <h2 class="text-center mb-4">📅 Detail Acara</h2>
+    <div class="card shadow">
+      <div class="card-body">
+        <h4>Nama Acara: Peluncuran Produk</h4>
+        <p><strong>Tanggal:</strong> 25 Januari 2026</p>
+        <p><strong>Waktu:</strong> 10:00 WIB</p>
+        <p><strong>Lokasi:</strong> Bandung Convention Center</p>
+        <p>Kami sangat menantikan kehadiran Anda dalam acara ini.</p>
+      </div>
     </div>
-  </div>
+  </section>
 
-  <!-- EVENT LIST -->
-  <div class="card mb-3">
-    <div class="card-header">Daftar Event</div>
-    <ul class="list-group list-group-flush" id="eventList"></ul>
-  </div>
+  <!-- RSVP Form -->
+  <section class="container my-5">
+    <h2 class="text-center mb-4">📝 RSVP Kehadiran</h2>
+    <form id="invitationForm" class="mb-4">
+      <div class="mb-3">
+        <label class="form-label">Nama Tamu</label>
+        <input type="text" id="guestName" class="form-control" required>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Email</label>
+        <input type="email" id="guestEmail" class="form-control" required>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Konfirmasi Kehadiran</label>
+        <select id="guestStatus" class="form-select" required>
+          <option value="Hadir">Hadir</option>
+          <option value="Tidak Hadir">Tidak Hadir</option>
+          <option value="Ragu-ragu">Ragu-ragu</option>
+        </select>
+      </div>
+      <button type="submit" class="btn btn-primary">Tambah RSVP</button>
+    </form>
 
-  <!-- GUEST FORM -->
-  <div class="card mb-3">
-    <div class="card-header">Tambah Tamu</div>
-    <div class="card-body">
-      <select class="form-control mb-2" id="guestEvent"></select>
-      <input class="form-control mb-2" id="guestName" placeholder="Nama Tamu">
-      <input class="form-control mb-2" id="guestPhone" placeholder="No HP">
-      <button class="btn btn-success" onclick="addGuest()">Tambah Tamu</button>
-    </div>
-  </div>
+    <!-- Tabel Daftar Tamu -->
+    <table class="table table-bordered table-striped">
+      <thead class="table-dark">
+        <tr>
+          <th>Nama</th>
+          <th>Email</th>
+          <th>Status</th>
+          <th>Aksi</th>
+        </tr>
+      </thead>
+      <tbody id="guestList"></tbody>
+    </table>
+  </section>
 
-  <!-- GUEST LIST -->
-  <div class="card mb-3">
-    <div class="card-header">Daftar Tamu</div>
-    <ul class="list-group list-group-flush" id="guestList"></ul>
-  </div>
+  <footer class="text-center bg-dark text-white p-3 mt-5">
+    <p>© 2026 Undangan Digital by Syqila</p>
+  </footer>
 
-</div>
-
-<script src="app.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
